boutique-eshop-yugabyte-dev/1-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yugabyte
---
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
