boutique-eshop-yugabyte-dev/2-distributed-database-AWS-AZ-GCP.yaml
apiVersion: v1
kind: Service
metadata:
  name: "yb-masters"
  namespace: yugabyte
  labels:
    app: "yb-master"
    service-type: "headless"
spec:
  clusterIP: None
  ports:
    - name: "http-ui"
      port: 7000
    - name: "tcp-rpc-port"
      port: 7100
  selector:
    app: "yb-master"
---
apiVersion: v1
kind: Service
metadata:
  name: "yb-tservers"
  namespace: yugabyte
  labels:
    app: "yb-tserver"
spec:
  clusterIP: None
  ports:
    - name: "http-ui"
      port: 9000
    - name: "http-ycql-met"
      port: 12000
    - name: "http-yedis-met"
      port: 11000
    - name: "http-ysql-met"
      port: 13000
    - name: "tcp-rpc-port"
      port: 9100
    - name: "tcp-yedis-port"
      port: 6379
    - name: "tcp-yql-port"
      port: 9042
    - name: "tcp-ysql-port"
      port: 5433
  selector:
    app: "yb-tserver"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "yb-master"
  namespace: "yugabyte"
  labels:
    app: "yb-master"
spec:
  serviceName: "yb-masters"
  podManagementPolicy: Parallel
  replicas: 3
  volumeClaimTemplates:
    - metadata:
        name: datadir0
        annotations:
          volume.beta.kubernetes.io/storage-class: cast-block-storage
        labels:
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: cast-block-storage
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: datadir1
        annotations:
          volume.beta.kubernetes.io/storage-class: cast-block-storage
        labels:
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: cast-block-storage
        resources:
          requests:
            storage: 10Gi
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app: "yb-master"
  template:
    metadata:
      labels:
        app: "yb-master"
    spec:
      serviceAccountName: nodereader
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                - key: topology.storage.csi.cast.ai/csp
                  operator: In
                  values:
                  - aws
                  - do
#        podAntiAffinity:
#          preferredDuringSchedulingIgnoredDuringExecution:
#            - weight: 10
#              podAffinityTerm:
#                labelSelector:
#                  matchExpressions:
#                    - key: app
#                      operator: In
#                      values: ["yb-master"]
#                topologyKey: kubernetes.io/hostname

#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: topology.storage.csi.cast.ai/csp
#                    operator: In
#                    values:
#                      - aws
#                      - gcp
#                      - azure
                    # - do

      containers:
        - name: "yb-master"
          image: "yugabytedb/yugabyte:2.5.1.0-b153"
          imagePullPolicy: IfNotPresent
          workingDir: "/mnt/disk0/cores"
          command:
            #command entrypoint is taken from mounted volume written to by init container.
            #init container copies template from configmap yb-master-servers and modifies placeholders
            #for csp, region, and zone
            - "sh"
            - "-c"
            - |
              /tmp/env/init-yb.sh
          ports:
            - containerPort: 7000
              name: "http-ui"
            - containerPort: 7100
              name: "tcp-rpc-port"
          volumeMounts:
            - name: datadir0
              mountPath: /mnt/disk0
            - name: datadir1
              mountPath: /mnt/disk1
            - name: config-shared-volume
              mountPath: /tmp/env/
      volumes:
        - name: config-shared-volume
          emptyDir: {}
        - name: cm-yb
          configMap:
            name: yb-master
            defaultMode: 0755
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "yb-tserver"
  namespace: "yugabyte"
  labels:
    app: "yb-tserver"
spec:
  serviceName: "yb-tservers"
  podManagementPolicy: Parallel
  replicas: 3
  volumeClaimTemplates:
    - metadata:
        name: datadir0
        annotations:
          volume.beta.kubernetes.io/storage-class: cast-block-storage
        labels:
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: cast-block-storage
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: datadir1
        annotations:
          volume.beta.kubernetes.io/storage-class: cast-block-storage
        labels:
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: cast-block-storage
        resources:
          requests:
            storage: 10Gi
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app: "yb-tserver"
  template:
    metadata:
      labels:
        app: "yb-tserver"
    spec:
      serviceAccountName: nodereader
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                - key: topology.storage.csi.cast.ai/csp
                  operator: In
                  values:
                  - aws
                  - do
#        podAntiAffinity:
#          preferredDuringSchedulingIgnoredDuringExecution:
#            - weight: 10
#              podAffinityTerm:
#                labelSelector:
#                  matchExpressions:
#                    - key: app
#                      operator: In
#                      values:
#                      - "yb-tserver"
#                topologyKey: kubernetes.io/hostname
      containers:
        - name: "yb-tserver"
          image: "yugabytedb/yugabyte:2.5.1.0-b153"
          imagePullPolicy: IfNotPresent
          workingDir: "/mnt/disk0/cores"
          #command entrypoint is taken from mounted volume written to by init container.
          #init container copies template from configmap yb-table-servers and modifies placeholders
          #for csp, region, and zone
          command:
            - "sh"
            - "-c"
            - |
              /tmp/env/init-yb.sh
          ports:
            - containerPort: 9000
              name: "http-ui"
            - containerPort: 12000
              name: "http-ycql-met"
            - containerPort: 11000
              name: "http-yedis-met"
            - containerPort: 13000
              name: "http-ysql-met"
            - containerPort: 9100
              name: "tcp-rpc-port"
            - containerPort: 6379
              name: "tcp-yedis-port"
            - containerPort: 9042
              name: "tcp-yql-port"
            - containerPort: 5433
              name: "tcp-ysql-port"
          volumeMounts:
            - name: datadir0
              mountPath: /mnt/disk0
            - name: datadir1
              mountPath: /mnt/disk1
            - name: config-shared-volume
              mountPath: /tmp/env
        - name: yb-cleanup
          image: "busybox:1.32"
          command:
            - "/bin/sh"
            - "-c"
            - >
              mkdir /var/spool/cron;
              mkdir /var/spool/cron/crontabs;
              echo "0 * * * * /home/yugabyte/scripts/log_cleanup.sh" | tee -a /var/spool/cron/crontabs/root;
              crond;
              while true; do
                sleep 86400;
              done
          volumeMounts:
            - name: datadir0
              mountPath: /home/yugabyte/
              subPath: yb-data
      volumes:
        - name: config-shared-volume
          emptyDir: {}
        - name: yb-table-servers
          configMap:
            name: yb-table-servers
            defaultMode: 0755
